--- a/index.css
+++ b/index.css
@@ -14,7 +14,7 @@ body{
    background-attachment: fixed;
    background-size: cover;
    background-repeat: no-repeat;
-
+   font-size: 12px;
 }
 
 .navbar{
@@ -26,29 +26,40 @@ body{
 
 .grid-container {
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     gap: 8px;
     /* background-color: #2196F3; */
     padding: 10px;
     height: 32rem;
     margin-left: 10rem;
+    margin-bottom: 5px;
     width: 80%;
+    
   }
    
   .grid-container > div {
     background-color: rgba(255, 255, 255, 0.8);
-    text-align: center;
-    padding: 20px 0;
-    font-size: 30px;
+    /* text-align: center; */
+    padding: 20px 8px;
+    /* font-size: 30px; */
   }
-   
+   .text-center{
+    text-align: center;
+   }
+
   .item1 {
     grid-row-start: 1;
     grid-row-end: 3;
     backdrop-filter: blur(2px);
     border-radius: 0.5rem;
+    border: 3px solid #2f7b94;
+    width: 19rem;
+    height: 38rem;
+ 
     }
-
+    .item1 p{
+      font-size: 12px;
+    }
     .list{
         height: 26rem;
         list-style-type: none;
@@ -66,18 +77,68 @@ body{
         height: 16%; 
         font-size: small;
     }
+    .in-circle{
+      height: 35px;
+      width: 35px;
+      border-radius: 25px;
+      background-color: red;
+      color: white;
+      text-align: center;
+      font-size: 18px;
+      line-height: 35px;
+      position: absolute;
+      left: -46px;
+      top: 10px;
 
-    .item2{
-     
     }
 
-    .item3{
+
+    .bi-heart{
+      height: 30px;
+      width: 30px;
+     color: red;
+    }
+
+    .likes{
+      height: 20px;
+      width: 20px;
+      border-radius: 10px;
+      font-size: 10px;
+      background-color: lightblue;
+      padding-top: 3px;
+      padding-left: 1px;
+      color: white;
+      margin-top: -8px;
+      position: absolute;
+      margin-left: 11px;
+    }
+
+    .red{
+      color:red;
+      margin-top: -29px;
+    }
+.float-right{
+  float: right;
+}
+.nomination{
+  padding: 10px 25px 5px;
+  margin-top:10px;
+}
+.nomination label{
+font-size: 13px;
+}
+.nomination-border{
+  border-bottom: solid 1px red;
+}
+    .item2, .item3{
+      grid-column:span 1;
+    }
+
   
-    }
    
       .item4{
-    grid-column-start: 2;
-    grid-column-end: 4;
+    grid-column: span 2;
+ 
     
-    }
+    } 
 
