--- a/index.css
+++ b/index.css
@@ -27,6 +27,7 @@ body{
 .grid-container {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    /* grid-template-columns: repeat(3, 1fr); */
     gap: 8px;
     /* background-color: #2196F3; */
     padding: 10px;
@@ -38,7 +39,7 @@ body{
   }
    
   .grid-container > div {
-    background-color: rgba(255, 255, 255, 0.8);
+ 
     /* text-align: center; */
     padding: 20px 8px;
     /* font-size: 30px; */
@@ -55,6 +56,7 @@ body{
     border: 3px solid #2f7b94;
     width: 19rem;
     height: 38rem;
+    background-color: rgba(255, 255, 255, 0.8);
  
     }
     .item1 p{
@@ -132,13 +134,52 @@ font-size: 13px;
 }
     .item2, .item3{
       grid-column:span 1;
+      background-color: rgba(255, 255, 255, 0.8);
     }
-
-  
    
       .item4{
     grid-column: span 2;
- 
-    
+    overflow-y: hidden;
+    background-color: grey;
+    border-radius: 0.5rem;
+    grid-row-start: 2;
+    grid-row-end: 2;
     } 
 
+/* News tab or column styles */
+.newsHeader{
+  color: white;
+}
+
+.news-border{
+  border-bottom: solid 1px white;
+}
+
+.card{
+  margin-bottom: 10px;
+  display: flex;
+}
+
+.scrollable-content{
+  overflow-y:scroll;
+}
+
+.card-img{
+ 
+  max-width: 100px;
+  max-height: 100px;
+  display: block;
+  margin-right: 10px;
+}
+
+.card-body{
+  flex-grow: 1;
+}
+
+.card-title{
+  margin-top: 0;
+}
+
+.card-text{
+  margin-bottom: 0;
+}
