made the ui for Current quota statistics

--- a/index.css
+++ b/index.css
@@ -131,7 +131,8 @@ font-size: 13px;
   border-bottom: solid 1px red;
 }
     .item2, .item3{
-      grid-column:span 1;
+      grid-column:span 1; 
+      text-align: center;
     }
 
   
@@ -140,5 +141,32 @@ font-size: 13px;
     grid-column: span 2;
  
     
+    
     } 
+h4{ color: aqua;}
+.redd{ 
+  color:red;
 
+}
+.likess {
+  height: 20px;
+  width: 20px;
+  border-radius: 10px;
+  font-size: 10px;
+  background-color: lightblue;
+  padding-top: 3px;
+  padding-left: 1px;
+  color: white;
+  margin-top: -8px;
+  position: absolute;
+  left: -20px;
+}
+h2{ color: red;}
+
+
+.item3{
+  grid-column:span 1;
+  border-radius: 0.5rem;
+  height: 20rem;
+  text-align: center;
+}
