--- a/index.css
+++ b/index.css
@@ -144,6 +144,7 @@ font-size: 13px;
     border-radius: 0.5rem;
     grid-row-start: 2;
     grid-row-end: 2;
+    overflow-y: hidden;
   
     } 
 
@@ -158,7 +159,7 @@ font-size: 13px;
 
 .news-container{
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-between;
   /* align-items: center; */
   margin-top: 10px;
@@ -202,7 +203,7 @@ font-size: 13px;
   font-size: 12px;
 } */
 
-/* .news-wrapper{
+.news-wrapper{
   height: auto;
-  overflow-x: scroll;
-} */
+  overflow-y: auto;
+}
