--- a/index.css
+++ b/index.css
@@ -140,12 +140,11 @@ font-size: 13px;
       .item4{
     grid-column: span 2;
     overflow-y: hidden;
-    background-color: grey;
+    background-color: rgb(86, 85, 85);
     border-radius: 0.5rem;
     grid-row-start: 2;
     grid-row-end: 2;
     overflow-y: hidden;
-  
     } 
 
 /* News tab or column styles */
@@ -163,6 +162,7 @@ font-size: 13px;
   justify-content: space-between;
   /* align-items: center; */
   margin-top: 10px;
+  height: 330px;
 }
 
 .news-item{
@@ -170,6 +170,10 @@ font-size: 13px;
   align-items: center;
   /* width: 45%; */
   margin-bottom: 20px;
+}
+
+.image-wrapper{
+  position: relative;
 }
 
 .news-img{
@@ -181,29 +185,37 @@ font-size: 13px;
 
 .news-content{
   flex: 1;
+  margin-bottom: 5px;
 }
 
 .news-title{
-  font-size: 16px;
-  margin-bottom: 5px;
+  font-size: 15px;
+  margin-bottom: 10px;
+  color: white;
 }
 
 .news-description{
   font-size: 14px;
-  color: #666;
+  color: white;
 }
 
-/* .date-overlay{
-  position:absolute;
-  bottom: 5px;
-  right: 5px;
-  background-color: red;
+.date-overlay{
+  position: absolute;
+  bottom: 0px;
+  right: 20px;
+  height: 30px;
+  width: auto;
+  text-align: center;
+  background-color: darkred;
   padding: 3px 8px;
-  border-radius: 5px;
-  font-size: 12px;
-} */
+  /* border-radius: 5px; */
+  font-size: 9px;
+  color: whitesmoke;
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-weight:lighter;
+}
 
 .news-wrapper{
+  overflow-y: scroll;
   height: auto;
-  overflow-y: auto;
 }
