--- a/index.css
+++ b/index.css
@@ -3,6 +3,7 @@
 } */
 
 body{
+  position: absolute;
    overflow: hidden;
    height: calc(100% - 150px);
    width: 100%;
@@ -10,7 +11,7 @@ body{
    font-family: Roboto, "Helvetica Neue", sans-serif;
    font-family: "Open Sans", sans-serif;
    background-image: url(./assets/images/landing.png);
-   background-position: center;
+   background-position: right;
    background-attachment: fixed;
    background-size: cover;
    background-repeat: no-repeat;
@@ -26,7 +27,7 @@ body{
 
 .grid-container {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(250px, 325px));
     gap: 8px;
     /* background-color: #2196F3; */
     padding: 10px;
@@ -38,13 +39,34 @@ body{
   }
    
   .grid-container > div {
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: #ffffff99;
     /* text-align: center; */
     padding: 20px 8px;
     /* font-size: 30px; */
   }
+  
+  .reloadcircle { 
+    position: absolute;
+    width: 40px; 
+    height: 40px; 
+    border-radius: 50%; 
+    border: 3px solid #bd0404;
+    background: transparent;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    right: 10px;
+    top:15px
+}
+
+.reload-icon{
+  font-size: 1.5rem;
+}
+
    .text-center{
-    text-align: center;
+    padding-left: 4rem;
+    color: #bd0404;
+    font-weight:370;
    }
 
   .item1 {
@@ -52,13 +74,26 @@ body{
     grid-row-end: 3;
     backdrop-filter: blur(2px);
     border-radius: 0.5rem;
-    border: 3px solid #2f7b94;
-    width: 19rem;
-    height: 38rem;
+    border: 3px solid #03bfff;
+    /* width: 19rem;
+    height: 38rem; */
+    background:transparent;
  
     }
+    .item1 h6{
+      color: #fff;
+      font-weight: 400;
+      
+
+    }
+    .label1{
+    margin-bottom:0px; display:inline-block;
+    }
+
     .item1 p{
       font-size: 12px;
+      color: #2b2020;
+      font-weight: 600;
     }
     .list{
         height: 26rem;
@@ -68,7 +103,7 @@ body{
     }
 
     .listHeader{
-        color: red;
+        color: #bd0404;
         font-size: large;
     }
 
@@ -77,11 +112,12 @@ body{
         height: 16%; 
         font-size: small;
     }
+
     .in-circle{
       height: 35px;
       width: 35px;
       border-radius: 25px;
-      background-color: red;
+      background-color: #bd0404;
       color: white;
       text-align: center;
       font-size: 18px;
@@ -89,32 +125,30 @@ body{
       position: absolute;
       left: -46px;
       top: 10px;
-
     }
-
 
     .bi-heart{
       height: 30px;
       width: 30px;
-     color: red;
+     color: #bd0404;
     }
 
     .likes{
-      height: 20px;
-      width: 20px;
+      height: 18px;
+      width: 18px;
       border-radius: 10px;
-      font-size: 10px;
-      background-color: lightblue;
-      padding-top: 3px;
-      padding-left: 1px;
+      font-size: 8px;
+      background-color:#03bfff;
+      padding-top: 4px;
+      padding-left: 2px;
       color: white;
-      margin-top: -8px;
+      margin-top: -6px;
       position: absolute;
-      margin-left: 11px;
+      margin-left: 12px;
     }
 
     .red{
-      color:red;
+      color:#bd0404;
       margin-top: -29px;
     }
 .float-right{
@@ -128,7 +162,7 @@ body{
 font-size: 13px;
 }
 .nomination-border{
-  border-bottom: solid 1px red;
+  border-bottom: solid 1px#bd0404 ;
 }
     .item2, .item3{
       grid-column:span 1;
@@ -138,7 +172,19 @@ font-size: 13px;
    
       .item4{
     grid-column: span 2;
- 
+    grid-row-start: 2;
+    grid-row-end: 3;
     
     } 
 
+.l-h-0-5{
+  line-height: 0.5;
+}
+.header-recent{
+  border-bottom: solid white 1px;
+  padding: 20px 70px;
+}
+
+.header-recent h6 {
+    color: #bd0404;
+}
