--- a/index.css
+++ b/index.css
@@ -140,16 +140,23 @@ font-size: 13px;
       .item4{
     grid-column: span 2;
     overflow-y: hidden;
-    background-color: rgb(86, 85, 85);
+    /* background-color: rgb(66, 63, 63); */
+    background-color: rgba(45, 45, 45, 0.5);
     border-radius: 0.5rem;
     grid-row-start: 2;
     grid-row-end: 2;
     overflow-y: hidden;
+    width: 39rem;
+    height: 25rem;
+    backdrop-filter: blur(8px);
     } 
 
 /* News tab or column styles */
 .newsHeader{
-  color: white;
+  color: rgba(255, 255, 255, 0.815);
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-weight: lighter;
+  font-size: 20px;
 }
 
 .news-border{
@@ -162,7 +169,7 @@ font-size: 13px;
   justify-content: space-between;
   /* align-items: center; */
   margin-top: 10px;
-  height: 330px;
+  width: 100%;
 }
 
 .news-item{
@@ -178,7 +185,7 @@ font-size: 13px;
 
 .news-img{
   width:150px;
-  height: 110px;
+  height: 140px;
   object-fit: cover;
   margin-right: 20px;
 }
@@ -189,14 +196,18 @@ font-size: 13px;
 }
 
 .news-title{
-  font-size: 15px;
+  font-size: 20px;
   margin-bottom: 10px;
-  color: white;
+  color: rgba(255, 255, 255, 0.815);
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-weight: lighter;
 }
 
 .news-description{
-  font-size: 14px;
-  color: white;
+  font-size: 11px;
+  color: rgba(255, 255, 255, 0.815);
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: lighter;
 }
 
 .date-overlay{
@@ -208,7 +219,6 @@ font-size: 13px;
   text-align: center;
   background-color: darkred;
   padding: 3px 8px;
-  /* border-radius: 5px; */
   font-size: 9px;
   color: whitesmoke;
   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -217,5 +227,30 @@ font-size: 13px;
 
 .news-wrapper{
   overflow-y: scroll;
+  height: 300px;
+  margin-top: 5px;
+  align-items: center;
+  padding: 5px 20px 5px;
+}
+
+::-webkit-scrollbar-track{
+  background: black;
+  border-radius: 8px;
+  
+}
+
+::-webkit-scrollbar-thumb{
+  background: rgb(137, 23, 23);
+  border-radius: 20px;
+  /* height: 5px;
+
+  width: 5px; */
+}
+
+::-webkit-scrollbar{
+  background-color: black;
+  border-radius: 10px;
+  width: 12px;
   height: auto;
 }
+
