--- a/index.css
+++ b/index.css
@@ -44,24 +44,7 @@ body{
     padding: 20px 8px;
     /* font-size: 30px; */
   }
-   .text-center{
-    text-align: center;
-   }
-
-  .item1 {
-    grid-row-start: 1;
-    grid-row-end: 3;
-    backdrop-filter: blur(2px);
-    border-radius: 0.5rem;
-    border: 3px solid #2f7b94;
-    width: 19rem;
-    height: 38rem;
-    background-color: rgba(255, 255, 255, 0.8);
- 
-    }
-    .item1 p{
-      font-size: 12px;
-    }
+   
     .list{
         height: 26rem;
         list-style-type: none;
@@ -252,5 +235,160 @@ font-size: 13px;
   border-radius: 10px;
   width: 12px;
   height: auto;
+}
+
+
+/* Item 1 styles */
+
+.reloadcircle {
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: 3px solid #bd0404;
+  background: transparent;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  right: 10px;
+  top:15px
+}
+
+.reloadcircle::before {
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  border-radius: 58px;
+  border: 3px solid transparent;
+  background: transparent; content: "";
+  background: linear-gradient(#bd0404,#f94e1a);
+  -webkit-mask: radial-gradient(farthest-side, transparent calc(100% - 2px),#fff 0);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+
+.reload-icon{
+font-size: 1.5rem;
+}
+
+ .text-center{
+  padding-left: 4rem;
+  color: #bd0404;
+  font-weight:370;
+ }
+
+.item1 {
+  grid-row-start: 1;
+  grid-row-end: 3;
+  backdrop-filter: blur(2px);
+  border-radius: 0.5rem;
+  border: 3px solid #03bfff;
+  /* width: 19rem;
+  height: 38rem; */
+  background:transparent;
+  min-width: 250px;
+  background-color: #ffffff99;
+
+  }
+  .item1 h6{
+    color: #fff;
+    font-weight: 400;
+   
+
+  }
+  .label1{
+  margin-bottom:0px; display:inline-block;
+  }
+
+  .item1 p{
+    font-size: 12px;
+    color: #2b2020;
+    font-weight: 600;
+  }
+  .list{
+      height: 26rem;
+      list-style-type: none;
+      /* margin: rem; */
+      /* background-color: aqua; */
+  }
+
+  .listHeader{
+      color: #bd0404;
+      font-size: large;
+  }
+
+  .ourList{
+      margin: 0.5rem;
+      height: 16%;
+      font-size: small;
+  }
+
+  .in-circle{
+    height: 35px;
+    width: 35px;
+    border-radius: 25px;
+    background-color: #bd0404;
+    color: white;
+    text-align: center;
+    font-size: 18px;
+    line-height: 35px;
+    position: absolute;
+    left: -46px;
+    top: 10px;
+  }
+
+  .far{
+   color: #bd0404;
+  }
+.fas{
+color: #bd0404;
+}
+  .likes{
+    height: 18px;
+    width: 18px;
+    border-radius: 10px;
+    font-size: 8px;
+    background-color:#03bfff;
+    padding-top: 4px;
+    padding-left: 2px;
+    color: white;
+    margin-top: -6px;
+    position: absolute;
+    margin-left: 12px;
+  }
+
+  .red{
+    color:#bd0404;
+    margin-top: -29px;
+  }
+.float-right{
+float: right;
+}
+.nomination{
+padding: 10px 25px 5px;
+margin-top:10px;
+}
+.nomination label{
+font-size: 13px;
+}
+.nomination-border{
+border-bottom: solid 1px#bd0404 ;
+}
+
+.l-h-0-5{
+line-height: 0.5;
+}
+.header-recent{
+/* border-bottom: solid white 1px; */
+padding: 20px 70px 35px;
+}
+
+.header-recent h6 {
+  color: #bd0404;
+}
+.border-white{
+border-bottom: 1px solid white;
 }
 
