--- a/index2.css
+++ b/index2.css
@@ -224,7 +224,9 @@ width:80%;
 
 .item3{
   grid-column:span 1;
-  width: 320px;
+  width: 300px;
+  background-color: white;
+  border-radius: 0.5rem;
 }
 
 .card-stats{
@@ -269,10 +271,10 @@ width:80%;
   font-weight: bold;
   background-color: darkred;
   border-radius: 50%;
-  /* width: 30px;
-  height: 30px; */
-  padding: 5px 10px;
-  margin-left: 220px;
+  width: 25px;
+  height: 25px;
+  /* padding: 5px 10px; */
+  margin-left: 180px;
   color: #ececec;
 }
  
@@ -281,10 +283,10 @@ width:80%;
   font-weight: bold;
   background-color: darkred;
   border-radius: 50%;
-  /* width: 30px;
-  height: 30px; */
+  width: 25px;
+  height: 25px;
   padding: 5px 10px;
-  margin-left: 200px;
+  margin-left: 160px;
   color: #ececec;
 }
  
@@ -442,4 +444,25 @@ height: auto;
   background-size: 150%;
   background-attachment: fixed;
 }
+}
+
+
+
+.one {
+  background-color: #03bfff;
+}
+.two {
+  background-color: #bd0404;
+}
+.three {
+  background-color: #f94e1a;
+}
+.four {
+  background-color: #fff;
+}
+.five {
+  background-color: #03bfff;
+}
+.six {
+  background-color: #000;
 }
