--- a/index.css
+++ b/index.css
@@ -93,10 +93,10 @@
     height: 18px;
 }
 
-.stats4{
+/* .stats4{
     height: 8px;
     padding: 1px;
-}
+} */
 .stats4{
     height: 8px;
     padding: 1px;
