--- a/index.css
+++ b/index.css
@@ -56,16 +56,17 @@
 }
 
 .absa-badge {
-    padding:0 !important;
+    padding-left: 9px !important;
+    padding-bottom: 22px !important;
     margin: 0;
     display: block;
     height: 25px;
-    line-height: 25px;
+    line-height: 28px;
     width: 25px;
     background-color: #9d0003;
     font-size: 0.8rem;
     color: white;
-    padding: 10px;
+    /* padding: 15px; */
     border-radius: 50%;
     
 }
@@ -74,41 +75,192 @@
     color: #fff;
 }
 
-
+.bx2{
+    background-color: rgba(255,255,255, .7);
+    backdrop-filter: blur(2px);
+    /* padding: 10px; */
+    text-align: left;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
 .stats{
     padding-left: 2rem;
     padding-right: 2rem;
     color: #9d0003;
 }
 
-.stats1 { 
-    padding: 0.8px;
+.head2{
+    color: #9d0003;
+    margin-left: 1rem;
+    padding: 10px;
+    font-size: 18px; 
 }
 
-.one{
-    color: #000;
+.stats1 { 
+    height: 63px;
+    .balDiv{
+        margin-top: -15px;
+    }
+    .availText{
+        margin-bottom: -15px;
+    }
+    .balance{
+        font-size: 25px;
+        font-weight: bold;
+        color: #000;
+    }
+}
+
+.stats2{
+    height: 43px;
+    .colTwo{
+        height: 30px;
+        margin-top: -15px;
+        font-size: 20px;
+    }
+    .colThree{
+        height: 30px;
+        margin-top: -15px;
+        padding-top: 2px !important;
+        padding-left: 110px !important;
+    }
+    .rowTwo{
+        padding-top: 0px; 
+        padding-left: 10px;
+        margin-bottom: -15px;
+       
+    }
 }
 
 .stats3{
-    height: 18px;
+    height: 22px;
+    .colTwo3{
+        height: 30px;
+        margin-top: -15px;
+        font-size: 20px;
+    }
+    .colThree3{
+        height: 30px;
+        margin-top: -15px;
+        padding-top: 2px !important;
+        padding-left: 110px !important;
+    }
+    .rowTwo3{
+        padding-top: 0px; 
+        padding-left: 15px;
+        margin-bottom: -15px;
+    }
 }
 
-/* .stats4{
-    height: 8px;
-    padding: 1px;
-} */
 .stats4{
-    height: 8px;
-    padding: 1px;
+    margin-top: 0 !important;
+    height: 9px;
+    .col-sm-2{
+      padding-left: 0;
+    }
+    /* .row4{
+        margin-top: 0 !important;
+        background-color: aquamarine;
+    } */
 }
 
-
-
-.py-3{
-    color: #9d0003;
+.stats5{
+    height: 9px;
+    .col-sm-2{
+        padding-left: 0;
+    }
 }
+
+/* .row5{
+    padding-left: 2rem;
+    background-color: #f15726;
+    width: 70%;
+} */
+
+
 
 /* .hrLine{
   margin-right: 100rem;
   background-color: #9d0003;
 } */
+
+
+
+/* 
+.card-stats{
+ 
+ text-align: left;
+}
+ 
+.statsHead{
+  font-size: 18px;
+  font-weight: lighter;
+  margin-bottom: 10px;
+  color: #bd0404;
+  text-align: center;
+}
+ 
+.noms{
+ 
+  align-items: left;
+}
+ 
+.noms span{
+  font-size: 16px;
+}
+ 
+.balmain{
+  font-size: 25px;
+  font-weight: bold;
+  color: #03bfff;
+}
+ 
+.noms p{
+  color: #bd0404;
+}
+ 
+.statsBorder{
+  border-bottom: solid 1px#bd0404;
+}
+ 
+.nom1{
+  font-size: 5px;
+  font-weight: bold;
+  background-color: darkred;
+  border-radius: 50%;
+
+  padding: 5px 10px;
+  margin-left: 220px;
+  color: #ececec;
+}
+ 
+.nom2{
+  font-size: 5px;
+  font-weight: bold;
+  background-color: darkred;
+  border-radius: 50%;
+
+  padding: 5px 10px;
+  margin-left: 200px;
+  color: #ececec;
+}
+ 
+.bal{
+  font-weight: bold;
+}
+ 
+.statsContainer{
+
+  align-items: left;
+  margin-top: 30px;
+  padding-bottom: 20px;
+  padding: 5px 20px 5px;
+ 
+}
+ 
+.over{
+  display: flex;
+  
+}
+*/
