--- a/index.css
+++ b/index.css
@@ -1,207 +1,211 @@
-
-
-
-  body {
-    background-position: center;
-    background-size: cover;
-    background-attachment: fixed;
-    background-repeat: no-repeat;
+body {
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
   background-image: url(./assets/images/landing.png);
 }
 
 .box {
-    background-color: rgba(255,255,255, .7);
-    backdrop-filter: blur(2px);
-    /* padding: 10px; */
-    text-align: center;
-    border-radius: 10px;
-    overflow: hidden;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  background-color: rgba(255, 255, 255, .7);
+  backdrop-filter: blur(2px);
+  /* padding: 10px; */
+  text-align: center;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
+
 .fg-white {
-    color: #fff;
+  color: #fff;
 }
-.navbar{
-  color:  #ececec;
+
+.navbar {
+  color: #ececec;
   background-color: rgba(45, 45, 45, 0.5);
   height: 5rem;
   padding-left: 2.5rem;
 }
 
 .bg-red {
-    background-color: #9d0003;
+  background-color: #9d0003;
 }
+
 .absa-btn {
-    text-decoration: none;
-    width: 100%;
-    padding: 10px;
-    border-radius: 50px;
-    display: block;color: #fff;
-    transition: all 0.2s;
+  text-decoration: none;
+  width: 100%;
+  padding: 10px;
+  border-radius: 50px;
+  display: block;
+  color: #fff;
+  transition: all 0.2s;
 }
 
 .absa-btn:hover {
-    transform: scale(1.1);
+  transform: scale(1.1);
 }
+
 .btn-black {
-    background-color: #000;
-    
+  background-color: #000;
+
 }
+
 .btn-orange {
-    background-color: #f15726;
+  background-color: #f15726;
 }
+
 .btn-white {
-    background-color: #fff;
-    color: #9d0003
+  background-color: #fff;
+  color: #9d0003
 }
 
 .absa-badge {
-    padding:0 !important;
-    margin: 0;
-    display: block;
-    height: 25px;
-    line-height: 25px;
-    width: 25px;
-    background-color: #9d0003;
-    font-size: 0.8rem;
-    color: white;
-    padding: 10px;
-    border-radius: 50%;
+  padding: 0 !important;
+  margin: 0;
+  display: block;
+  height: 25px;
+  line-height: 25px;
+  width: 25px;
+  background-color: #9d0003;
+  font-size: 0.8rem;
+  color: white;
+  padding: 10px;
+  border-radius: 50%;
 }
 
 .stats {
-    padding: 20px 10px;
-    border-top: 1px solid #9d0003;
-    border-bottom: 1px solid #9d0003;
+  padding: 20px 10px;
+  border-top: 1px solid #9d0003;
+  border-bottom: 1px solid #9d0003;
 }
 
 /* News tab or column styles */
-.news-head{
-    color: rgba(255, 255, 255, 0.815);
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-weight: lighter;
-    font-size: 20px;
-    margin-top: 30px;
-    margin-left: 20px;
-  }
-  
-  .custom-hr{
-    position: absolute;
-    width: calc(100%-40px);
-    margin-left: 30px;
-    background-color: #ececec;
-    margin-right: 30px;
-    margin-bottom: 0;
-    margin-top: 0;
-    border: none;
-  }
+.news-head {
+  color: rgba(255, 255, 255, 0.815);
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-weight: lighter;
+  font-size: 20px;
+  margin-top: 30px;
+  margin-left: 20px;
+}
 
-  .custom-hr::after{
-    content: "";
-    position: relative;
-    top: 0;
-    right: -30px !important;
-    width: 20px;
-    height: 100%;
-    background-color: #ececec;
-  }
+.custom-hr {
+  position: absolute;
+  width: calc(100%-40px);
+  margin-left: 30px;
+  background-color: #ececec;
+  margin-right: 30px;
+  margin-bottom: 0;
+  margin-top: 0;
+  border: none;
+}
 
-  .card-news{
-    width: 100% !important;
-  }
-  
-  .news-container{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    margin-top: 10px;
-    width: 100%;
-  }
-  
-  .news-item{
-    display: flex;
-    align-items: center;
-    margin-bottom: 20px;
-  }
-  
-  .image-wrapper{
-    position: relative;
-  }
-  
-  .news-img{
-    width:150px;
-    height: 140px;
-    object-fit: cover;
-    margin-right: 20px;
-  }
-  
-  .news-content{
-    flex: 1;
-    margin-bottom: 5px;
-  }
-  
-  .news-title{
-    font-size: 23px;
-    margin-bottom: 10px;
-    color: rgba(255, 255, 255, 0.815);
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-weight: lighter;
-  }
-  
-  .news-description{
-    font-size: 14px;
-    color: rgba(255, 255, 255, 0.815);
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: lighter;
-  }
-  
-  .date-overlay{
-    position: absolute;
-    bottom: 0px;
-    right: 20px;
-    height: 30px;
-    width: auto;
-    text-align: center;
-    background-color: darkred;
-    padding: 3px 8px;
-    font-size: 9px;
-    color: whitesmoke;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-weight:lighter;
-  }
-  
-  .news-wrapper{
-    overflow-y: scroll;
-    height: 300px;
-    margin-top: 5px;
-    align-items: center;
-    padding: 5px 20px 5px;
-  }
-  
-  ::-webkit-scrollbar-track{
-    background: white;
-    border-radius: 8px;
-    
-  }
-  
-  ::-webkit-scrollbar-thumb{
-    background: rgb(137, 23, 23);
-    border-radius: 20px;
-  }
-  
-  ::-webkit-scrollbar{
-    background-color: white !important;
-    border-radius: 10px;
-    width: 12px;
-    height: auto;
-  }
+.custom-hr::after {
+  content: "";
+  position: relative;
+  top: 0;
+  right: -30px !important;
+  width: 20px;
+  height: 100%;
+  background-color: #ececec;
+}
 
-  .box2{
-    background-color: rgba(45, 45, 45, 0.5);
-    backdrop-filter: blur(2px);
-    /* padding: 10px; */
-    text-align: left;
-    border-radius: 10px;
-    overflow: hidden;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+.card-news {
+  width: 100% !important;
+}
+
+.news-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-top: 10px;
+  width: 100%;
+}
+
+.news-item {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.image-wrapper {
+  position: relative;
+}
+
+.news-img {
+  width: 150px;
+  height: 140px;
+  object-fit: cover;
+  margin-right: 20px;
+}
+
+.news-content {
+  flex: 1;
+  margin-bottom: 5px;
+}
+
+.news-title {
+  font-size: 23px;
+  margin-bottom: 10px;
+  color: rgba(255, 255, 255, 0.815);
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-weight: lighter;
+}
+
+.news-description {
+  font-size: 14px;
+  color: rgba(255, 255, 255, 0.815);
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: lighter;
+}
+
+.date-overlay {
+  position: absolute;
+  bottom: 0px;
+  right: 20px;
+  height: 30px;
+  width: auto;
+  text-align: center;
+  background-color: darkred;
+  padding: 3px 8px;
+  font-size: 9px;
+  color: whitesmoke;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-weight: lighter;
+}
+
+.news-wrapper {
+  overflow-y: scroll;
+  height: 300px;
+  margin-top: 5px;
+  align-items: center;
+  padding: 5px 20px 5px;
+}
+
+::-webkit-scrollbar-track {
+  background: white;
+  border-radius: 8px;
+
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgb(137, 23, 23);
+  border-radius: 20px;
+}
+
+::-webkit-scrollbar {
+  background-color: white !important;
+  border-radius: 10px;
+  width: 12px;
+  height: auto;
+}
+
+.box4 {
+  background-color: rgba(45, 45, 45, 0.5);
+  backdrop-filter: blur(2px);
+  /* padding: 10px; */
+  text-align: left;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
